--- a/env/pyvenv.cfg
+++ b/env/pyvenv.cfg
@@ -1,3 +1,3 @@
-home = C:\Users\李振国\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.8_qbz5n2kfra8p0
+home = D:\python37
 include-system-site-packages = false
-version = 3.8.10
+version = 3.7.3
